Revision history for {{$dist->name}}

{{$NEXT}}

0.01017322 2010-11-04 19:56:23 Pacific/Auckland
        Ramp up BuiltWith dep.
        Ramp up MetaProvides dep.

0.01017122 2010-11-02 19:00:35 Pacific/Auckland
        Inject Develop Needs/Suggests/Recommends for @KENTNL

0.01017119 2010-11-02 16:50:49 Pacific/Auckland
        Replace AutoPreReq with AutoPreReqs
        Replace Prereq with PreReqs

0.01010423 2010-08-28 19:47:18 Pacific/Auckland
        Custom DistINI now injects [Bootstrap::lib] instead of [=inc::lib]
        Added Bootstrap::lib into DevelopRequires

0.01009310 2010-08-17 06:13:54 Pacific/Auckland
        Dep latest CriticTests.
        use upcomming Bootstrap::lib instead of this [=inc::lib] sillyness.
        Cleaned a lot of redundant files.

0.01008321 2010-08-07 17:56:23 Pacific/Auckland
        Dep latest Autoversion::Relative, solve Moose Deprecation problems.
        Tweak DistINI generator to stuff in default hash_tags for twitter.

0.01007922 2010-08-03 18:25:33 Pacific/Auckland
        Dep latest. Modifiy to use new BuiltWith features.

0.01007006 2010-07-25 02:40:46 Pacific/Auckland
        Ramp up deps versions.
        Fix author test sillyness.
        Add hash_tags for twitter (and tuneables)

0.01006912 2010-07-24 08:56:10 Pacific/Auckland

        Bumping CompileTests and Git depends.
        Adding CommitBuild behaviour.
        Tidied Docs up a little.

0.01002610 2010-06-12 06:44:05 Pacific/Auckland
        Dropped "Repository" in favour of "GithubMeta"
        Use MetaData::BuiltWith.
        Bumped Test::EOL.

0.01002504 2010-06-11 00:10:51 Pacific/Auckland

        Added Dist::Zilla::Plugin::Author::KENTNL::DistINI.
        Now I can just 'dzil new Module-Name' and start hacking =).

0.01002419 2010-06-10 15:38:51 Pacific/Auckland
        Add Test::EOL dependencies.
        This release tests my hacks to Dist::Zilla in the eol department.

0.01002321 2010-06-09 17:13:23 Pacific/Auckland
